# final-project-devops

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: manage.sh
src/app/: config.py  routes.py
src/tests/: test_data_routes.py
